# fredos-with-openclaw

./: .gitignore  LICENSE  LICENSE_AUDIT_20260330.md  PUBLISH_CHECKLIST_20260330.md  README.md  README_FOR_AI.md  REPO_PUBLISH_GUIDE_20260330.md  SECRET_SCAN_REPORT_20260330.md
fredos/: .env.example  alembic.ini  fredos.bat  fredos_openapi.json  pyproject.toml  requirements.txt
fredos/alembic/: env.py
fredos/alembic/versions/: 639c35ae3d73_phase_7_intelligence_layer_v2.py  b7f3b9d4a1c2_add_openclaw_session_id_indexes.py
fredos/app/: __init__.py  main.py
fredos/app/agents/: chief_of_staff_agent.py  memory_curator_agent.py  research_agent.py  router_agent.py
fredos/app/api/: bridge_routes.py  routes.py
fredos/app/core/: __init__.py  config.py  llm.py
fredos/app/db/: __init__.py  base.py  seed.py
fredos/app/models/: __init__.py  daily_brief.py  document.py  event_log.py  execution.py  inbox.py  memory.py  project.py  research.py  session.py  task.py
fredos/app/schemas/: __init__.py  bridge.py
fredos/app/services/: bridge_service.py  consolidation_service.py  decision_service.py  event_service.py  fredos_service_layer.py  memory_service.py  project_service.py  queue_service.py  research_service.py  retrieval_service.py  task_service.py
fredos/docs/: memory_model.md  nanobot_integration.md  retrieval_policy.md  write_policy.md
fredos/scripts/: agent_loop.py  export_openapi.py  run_phase4_benchmarks.py  setup_portable_python.ps1  simulate_nanobot_workflow.py
fredos/tests/: test_agent_governance.py  test_api.py  test_models.py  test_services.py
(+45 files in other folders)
