[project]
name = "fredos"
version = "0.1.0"
description = "FredOS — Memory-first personal AI operating system"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends._legacy:_Backend"
